--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,21 @@ dependencies:
   flutter:
     sdk: flutter
   flame: 1.0.0
-
+  tiled: 0.7.2
+  flame_tiled: 1.0.0
+  provider: ^6.0.1
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  hive_generator: ^1.1.0
+  path_provider: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.1.7
+#  hive_generator: ^1.1.0
   flutter_test:
     sdk: flutter
 
